--- a/app/src/main/res/layout/activity_exam_result.xml
+++ b/app/src/main/res/layout/activity_exam_result.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="false">
+    android:clickable="false"
+    android:layoutDirection="rtl">
 
     <ImageView
         android:id="@+id/iv_logo"
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_8sdp"
         android:gravity="center"
-        android:text="Congratulations! You finished the exam."
+        android:text="تهانينا! لقد انهيت الاختبار."
         android:textColor="?attr/colorOnSecondary"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
@@ -37,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_8sdp"
         android:gravity="center"
-        android:text="Score: 1 / 3"
+        android:text="النتيجة: 1 / 3"
         android:textColor="?attr/colorOnSecondary"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
@@ -50,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
-        android:text="Retake the exam"
+        android:text="إعادة الاختبار"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
