--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="rtl"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +27,7 @@
             android:layout_width="@dimen/_270sdp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
-            android:hint="Email"
+            android:hint="البريد الالكترونى"
             android:textColorHint="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_12sdp"
-            android:hint="Password"
+            android:hint="كلمة المرور"
             android:textColorHint="@color/gray"
             app:layout_constraintEnd_toEndOf="@+id/itl_email"
             app:layout_constraintStart_toStartOf="@+id/itl_email"
@@ -74,7 +75,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_12sdp"
-            android:hint="Confirm password"
+            android:hint="تأكيد كلمة المرور"
             android:textColorHint="@color/gray"
             app:layout_constraintEnd_toEndOf="@+id/itl_email"
             app:layout_constraintStart_toStartOf="@+id/itl_email"
@@ -98,7 +99,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:backgroundTint="?attr/colorPrimaryVariant"
-            android:text="Register"
+            android:text="تسجيل"
             android:layout_marginTop="@dimen/_16sdp"
             android:textAllCaps="false"
             android:textColor="@color/white"
@@ -112,7 +113,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Have an account?"
+            android:text="لديك حساب؟"
             android:textColor="?attr/colorOnSecondary"
             android:textSize="@dimen/_14ssp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -126,7 +127,7 @@
             android:id="@+id/tv_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="تسجيل الدخول"
             android:textColor="?attr/colorPrimaryVariant"
             android:textSize="@dimen/_14ssp"
             android:textStyle="bold"
