--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="rtl"
     android:gravity="center">
 
     <androidx.cardview.widget.CardView
@@ -37,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_8sdp"
-                android:text="Loading.."
+                android:text="جار التحميل.."
                 android:textColor="?attr/colorOnSecondary"
                 android:textSize="@dimen/_14ssp"
                 android:textStyle="bold" />
